// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayUtils batches should return a single batch when perChunk is bigger than len 1`] = `
[
  [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
    60,
    61,
    62,
    63,
    64,
    65,
    66,
    67,
    68,
    69,
    70,
    71,
    72,
    73,
    74,
    75,
    76,
    77,
    78,
    79,
    80,
    81,
    82,
    83,
    84,
    85,
    86,
    87,
    88,
    89,
    90,
    91,
    92,
    93,
    94,
    95,
    96,
    97,
    98,
    99,
  ],
]
`;

exports[`ArrayUtils batches should return an empty array when no data is given 1`] = `[]`;

exports[`ArrayUtils batches should return matching elements grouped by batch number 1`] = `
[
  [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
  ],
  [
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
  ],
  [
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
  ],
  [
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
  ],
  [
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
  ],
  [
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
  ],
  [
    60,
    61,
    62,
    63,
    64,
    65,
    66,
    67,
    68,
    69,
  ],
  [
    70,
    71,
    72,
    73,
    74,
    75,
    76,
    77,
    78,
    79,
  ],
  [
    80,
    81,
    82,
    83,
    84,
    85,
    86,
    87,
    88,
    89,
  ],
  [
    90,
    91,
    92,
    93,
    94,
    95,
    96,
    97,
    98,
    99,
  ],
]
`;

exports[`ArrayUtils batches should return matching elements grouped by batch number 2`] = `
[
  [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
    60,
    61,
    62,
    63,
    64,
    65,
    66,
    67,
    68,
    69,
    70,
    71,
    72,
    73,
    74,
    75,
    76,
    77,
    78,
    79,
    80,
    81,
    82,
    83,
    84,
    85,
    86,
    87,
    88,
    89,
    90,
    91,
    92,
    93,
    94,
    95,
    96,
    97,
    98,
    99,
  ],
]
`;

exports[`ArrayUtils batches should return matching elements grouped by batch number 3`] = `[]`;

exports[`ArrayUtils groupBy should return matching elements grouped by sub-keys 1`] = `
{
  "blue": [
    {
      "color": "blue",
      "n": 1,
    },
    {
      "color": "blue",
      "n": 2,
    },
  ],
  "red": [
    {
      "color": "red",
      "n": 3,
    },
    {
      "color": "red",
      "n": 4,
    },
  ],
  "yellow": [
    {
      "color": "yellow",
      "n": 5,
    },
  ],
}
`;

exports[`ArrayUtils groupBy should return matching elements grouped by sub-keys 2`] = `
{
  "even": [
    {
      "color": "blue",
      "n": 2,
    },
    {
      "color": "red",
      "n": 4,
    },
  ],
  "odd": [
    {
      "color": "blue",
      "n": 1,
    },
    {
      "color": "red",
      "n": 3,
    },
    {
      "color": "yellow",
      "n": 5,
    },
  ],
}
`;

exports[`ArrayUtils toKeyValueArray should return matching elements grouped by keys 1`] = `
{
  "blue": {
    "color": "blue",
    "n": 2,
  },
  "red": {
    "color": "red",
    "n": 4,
  },
  "yellow": {
    "color": "yellow",
    "n": 5,
  },
}
`;

exports[`ArrayUtils toKeyValueArray should return matching elements grouped by keys 2`] = `
{
  "blue": 2,
  "red": 4,
  "yellow": 5,
}
`;
